🌒🌖 Checkpoint ./script.js:18092373/1876 ./style.css:18092373/2661 ./index.html:18092373/1430

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
+    <div id="userupload" onclick = "userUpload()">
+      Link an image
+    </div>
   </body>
 </html>
