--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>  
   <body>
     <div id="userupload" onclick = "userUpload()">
-      Link an image
+      Link new image
     </div>
   </body>
 </html>
