👩⛵️ Checkpoint ./script.js:18092373/4 ./index.html:18092373/488 ./style.css:18092373/118

--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <title>Hello!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Sahitya:wght@400;700&display=swap" rel="stylesheet">
+    <title>Guess Who?</title>
     
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
@@ -17,7 +14,16 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
+    <h1>
+      the revealer
+    </h1>
+    <p>
+      scroll to widen brush || hover to reveal
+    </p>
     <div id="userupload" onclick = "userUpload()">
+      Link new image
+    </div>
+    <div id="randomupload" onclick = "randomUpload()">
       Link new image
     </div>
   </body>
