⛽️🏪 Checkpoint ./index.html:18092373/202 ./style.css:18092373/768 ./script.js:18092373/159

--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
     <p>
       scroll to widen brush || hover to reveal
     </p>
-    <div id="userupload" onclick = "userUpload()">
+    <div class="container">
+          <div id="user-upload" class="button" onclick = "userUpload()">
       Link new image
     </div>
-    <div id="randomupload" onclick = "randomUpload()">
-      Link new image
+    <div id="random-upload" class="button" onclick = "randomUpload()">
+      Random image
+    </div>
+      
+    </div>
+
+    <div id="canvas-div">
     </div>
   </body>
 </html>
