🍬🍈 Checkpoint ./index.html:18092373/550 ./style.css:18092373/398

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Sahitya:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;700&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      href="https://image.flaticon.com/icons/svg/956/956664.svg"
+      type="image/x-icon"
+    />
     <title>the revealer</title>
     
     <!-- import the webpage's stylesheet -->
