--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <p>
       scroll to widen brush || hover to reveal
     </p>
+    <div id="error-display">
+      
+    </div>
     <div class="container">
           <div id="user-upload" class="button" onclick = "userUpload()">
       Link new image
