📇🎮 Checkpoint ./index.html:18092373/32 ./script.js:18092373/711 ./.glitch-assets:18092373/1238 ./style.css:18092373/2 ./README.md:18092373/463

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </div>
     <div class="container">
           <div id="user-upload" class="button" onclick = "userUpload()">
-      Link new image
+      Link new painting
     </div>
     <div id="random-upload" class="button" onclick = "randomUpload()">
-      Random image
+      Random painting
     </div>
       
     </div>
