📮🍐 Checkpoint ./index.html:18092373/18 ./script.js:18092373/217

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
           <div id="user-upload" class="button" onclick = "userUpload()">
-      Link new painting
+      Upload new 
     </div>
     <div id="random-upload" class="button" onclick = "randomUpload()">
       Random painting
