📖🏭 Checkpoint ./style.css:18092373/2238 ./script.js:18092373/6595 ./README.md:18092373/5 ./index.html:18092373/198

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       the revealer
     </h1>
     <p>
-      scroll to widen brush || hover to reveal
+      scroll to widen brush || hover to reveal 
     </p>
     <div id="error-display">
       
@@ -39,6 +39,9 @@
     </div>
 
     <div id="canvas-div">
+    </div>
+    <div>
+      <a href="https://glitch.com/edit/#!/the-revealer">view code</a>
     </div>
   </body>
 </html>
