🚥🚅 Checkpoint ./script.js:18092373/60 ./index.html:18092373/43

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       the revealer
     </h1>
     <p>
-      scroll to widen brush || hover to reveal 
+      scroll to widen brush || hover to reveal || click to pause
     </p>
     <div id="error-display">
       
