⚾️🍣 Checkpoint ./index.html:18092373/39

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       the revealer
     </h1>
     <p>
-      scroll to widen brush || hover to reveal || click to pause
+      scroll to widen brush || hover to reveal <br> click canvas to start on mobile
     </p>
     <div id="error-display">
       
