🌸🌊 Checkpoint ./index.html:18092373/142 ./script.js:18092373/15

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://image.flaticon.com/icons/svg/956/956664.svg"
       type="image/x-icon"
     />
-    <title>the revealer</title>
+    <title>softpoints</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -23,10 +23,10 @@
   </head>
   <body>
     <h1>
-      the revealer
+      softpoints
     </h1>
     <p>
-      scroll to widen brush || hover to reveal <br />
+      current brush size: 45 (scroll to widen) || hover to paint <br />
       click canvas to start on mobile
     </p>
     <div id="error-display"></div>
