📙🎤 Checkpoint ./script.js:18092373/500 ./index.html:18092373/137 ./style.css:18092373/96

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     <h1>
       softpoints
     </h1>
-    <p>
-      current brush size: 45 (scroll to widen) || hover to paint <br />
-      click canvas to start on mobile
+    <p id="instruction">
+      scroll brush size: 45  | hover to paint <br />
+      <p>
+        click canvas to start on mobile
+    </p>
     </p>
     <div id="error-display"></div>
     <div class="container">
