🐪🚣 Checkpoint ./style.css:18092373/104 ./script.js:18092373/368 ./index.html:18092373/12

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://image.flaticon.com/icons/svg/956/956664.svg"
       type="image/x-icon"
     />
-    <title>softpoints</title>
+    <title>softpaints</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -23,12 +23,12 @@
   </head>
   <body>
     <h1>
-      softpoints
+      softpaints
     </h1>
     <p id="instruction">
       scroll brush size: 45  | hover to paint <br />
       <p>
-        click canvas to start on mobile
+        tap canvas to start on mobile
     </p>
     </p>
     <div id="error-display"></div>
