💇👡 Checkpoint ./style.css:18092373/274 ./index.html:18092373/2 ./script.js:18092373/5

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://image.flaticon.com/icons/svg/956/956664.svg"
       type="image/x-icon"
     />
-    <title>softpaints</title>
+    <title>softpaint</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -23,7 +23,7 @@
   </head>
   <body>
     <h1>
-      softpaints
+      softpaint
     </h1>
     <p id="instruction">
       scroll brush size: 45  | hover to paint <br />
