🎓🎭 Checkpoint ./script.js:18092373/119 ./index.html:18092373/68 ./style.css:18092373/51

--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
     </div>
 
     <div id="canvas-div"></div>
-  <p id="source-link">
+  <div>
     
-  </p>
-  </body>
+  <a href="url" target="blank" id="source-link">
+    
+  </a>
+  </div>
+    </body>
 </html>
