🍧🙍 Checkpoint ./README.md:18092373/433 ./index.html:18092373/61 ./style.css:18092373/11 ./script.js:18092373/224 ./interface.js:18092373/48

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
-    <!-- import the webpage's javascript file -->
+    <!-- import the webpage's javascript files -->
     <script src="/script.js" defer></script>
+    <script src="/interface.js" defer></script>
   </head>
   <body>
     <h1>
