👨‍👨‍👦🍥 Checkpoint ./README.md:18092373/172 ./index.html:18092373/65

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <h1>
       softpaint
     </h1>
-    
+    <p>
+      take your time and make happy accidents. ♡
+    </p>
     <div id="error-display"></div>
     <div class="container">
       <div id="user-upload" class="button" onclick="userUpload()">
