🛬🛰 Checkpoint ./interface.js:18092373/66 ./index.html:18092373/6

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     <div id="error-display"></div>
     <div class="container">
       <div id="user-upload" class="button" onclick="userUpload()">
-        Upload
+        upload
       </div>
       <div id="random-upload" class="button" onclick="randomUpload()">
-        Random
+        random
       </div>
       <div id="save-painting" class="button" onclick="savePainting()">
-        Save
+        save
       </div>
     </div>
 
