👗🍿 Checkpoint ./index.html:18092373/439 ./style.css:18092373/150 ./script.js:18092373/47

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div id="user-upload" class="button" onclick="userUpload()">
         upload
       </div>
+      
       <div id="random-upload" class="button" onclick="randomUpload()">
         random
       </div>
@@ -55,6 +56,9 @@
       />
       <p id="instruction">scroll brush size: 45 | hover to paint <br /></p>
       <a href="url" target="blank" id="source-link"> </a>
+    </div>
+    <div id="test" class="button">
+      touchn't yet soap fix
     </div>
   </body>
 </html>
