--- a/index.html
+++ b/index.html
@@ -27,15 +27,22 @@
       softpaint
     </h1>
     <p>
-      take your time and make happy accidents. ♡
+      take your time, make happy accidents. ♡
     </p>
     <div id="error-display"></div>
     <div class="container">
-      <div id="user-upload" class="button" onclick="userUpload()">
+      <div id="user-link" class="button" onclick="userLink()">
         upload
       </div>
-      
-      <div id="random-upload" class="button" onclick="randomUpload()">
+      <input
+        type="file"
+        accept="image/*"
+        name="userupload"
+        id="user-upload"
+        onchange="userUpload(event)"
+        style="display: none;"
+      />
+      <div id="random-link" class="button" onclick="randomLink()">
         random
       </div>
       <div id="save-painting" class="button" onclick="savePainting()">
@@ -45,20 +52,13 @@
 
     <div id="canvas-div"></div>
     <div>
-      <input
-        id="slider"
-        type="range"
-        min="1"
-        max="100"
-        step="1"
-        value="10"
-        onchange="updateSlider(this.value)"
-      />
-      <p id="instruction">scroll brush size: 45 | hover to paint <br /></p>
+      <input id="slider" type="range" min="1" max="100"
+        step="1" value="10" onchange="updateSlider(this.value)"/>
+      <p id="instruction">scroll to change brush size: 40 | hover to paint <br /></p>
       <a href="url" target="blank" id="source-link"> </a>
     </div>
-    <div id="test" class="button">
+    <label for="file-upload" id="test" class="button">
       touchn't yet soap fix
-    </div>
+    </label>
   </body>
 </html>
