💴⚡️ Checkpoint ./README.md:18092373/132 ./interface.js:18092373/202 ./index.html:18092373/11 ./style.css:18092373/16 ./script.js:18092373/96

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <div>
       <input id="slider" type="range" min="1" max="100"
         step="1" value="10" onchange="updateSlider(this.value)"/>
-      <p id="instruction">scroll to change brush size: 40 | hover to paint <br /></p>
+      <p id="instruction">scroll to change || brush size: 40 | hover to paint <br /></p>
       <a href="url" target="blank" id="source-link"> </a>
     </div>
-    <label for="file-upload" id="test" class="button">
+    <label for="user-upload" id="test" class="button">
       touchn't yet soap fix
     </label>
   </body>
