🍵🍳 Checkpoint ./index.html:18092373/324 ./style.css:18092373/108 ./script.js:18092373/811 ./interface.js:18092373/6

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </p>
     <div id="error-display"></div>
     <div class="container">
-      <div id="user-link" class="button" onclick="userLink()">
-        upload
-      </div>
+      <label for="user-upload" id="user-uploader" class="button">
+      upload
+    </label>
       <input
         type="file"
         accept="image/*"
@@ -57,8 +57,6 @@
       <p id="instruction">scroll to change || brush size: 40 | hover to paint <br /></p>
       <a href="url" target="blank" id="source-link"> </a>
     </div>
-    <label for="user-upload" id="test" class="button">
-      touchn't yet soap fix
-    </label>
+    
   </body>
 </html>
