🙎👾 Checkpoint ./interface.js:18092373/5122 ./script.js:18092373/8933 ./index.html:18092373/3708 ./style.css:18092373/3985

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div id="error-display"></div>
     <div class="container">
       <label for="user-upload" id="user-uploader" class="button">
-      upload
-    </label>
+        upload
+      </label>
       <input
         type="file"
         accept="image/*"
@@ -52,11 +52,19 @@
 
     <div id="canvas-div"></div>
     <div>
-      <input id="slider" type="range" min="1" max="100"
-        step="1" value="10" onchange="updateSlider(this.value)"/>
-      <p id="instruction">scroll to change || brush size: 40 | hover to paint <br /></p>
+      <input
+        id="slider"
+        type="range"
+        min="1"
+        max="100"
+        step="1"
+        value="10"
+        onchange="updateSlider(this.value)"
+      />
+      <p id="instruction">
+        scroll to change || brush size: 40 | hover to paint <br />
+      </p>
       <a href="url" target="blank" id="source-link"> </a>
     </div>
-    
   </body>
 </html>
