👂💿 Checkpoint ./script.js:18092373/551 ./index.html:18092373/151

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       softpaint
     </h1>
     <p>
-      take your time, make happy accidents. ♡
+      paint from any photograph, art at your fingertips ♡
+      maintenance in progress
     </p>
     <div id="error-display"></div>
     <div class="container">
@@ -62,7 +63,7 @@
         onchange="updateSlider(this.value)"
       />
       <p id="instruction">
-        scroll to change || brush size: 40 | hover to paint <br />
+        scroll to change || brush size: 40 <br />
       </p>
       <a href="url" target="blank" id="source-link"> </a>
     </div>
