👆💾 Checkpoint ./index.html:18092373/351 ./script.js:18092373/87 ./interface.js:18092373/707

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link
       rel="icon"
-      href="https://image.flaticon.com/icons/svg/956/956664.svg"
+      href="https://image.flaticon.com/icons/svg/2928/2928790.svg"
       type="image/x-icon"
     />
     <title>softpaint</title>
@@ -62,10 +62,11 @@
         value="10"
         onchange="updateSlider(this.value)"
       />
+      <div class="container">
       <p id="instruction">
-        scroll to change || brush size: 40 <br />
+        scroll to change || brush size: 40 || <br />
       </p>
-      <a href="url" target="blank" id="source-link"> </a>
+        <a href="url" target="blank" id="source-link"> </a></div>
     </div>
   </body>
 </html>
