🌦🍣 Checkpoint ./interface.js:18092373/259 ./index.html:18092373/60

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       softpaint
     </h1>
     <p>
-      paint from any photograph, art at your fingertips ♡
-      maintenance in progress
+      paint from any photograph, art at your fingertips ♡ <br/>
+      maintenance in progress, squashing bugs!
     </p>
     <div id="error-display"></div>
     <div class="container">
@@ -62,7 +62,7 @@
         value="10"
         onchange="updateSlider(this.value)"
       />
-      <div class="container">
+      <div id="instruct"class="container">
       <p id="instruction">
         scroll to change || brush size: 40 || <br />
       </p>
