🚜🍤 Checkpoint ./index.html:18092373/1 ./style.css:18092373/136 ./script.js:18092373/27436

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         value="10"
         onchange="updateSlider(this.value)"
       />
-      <div id="instruct"class="container">
+      <div id="instruct-container" class="container">
       <p id="instruction">
         scroll to change || brush size: 40 || <br />
       </p>
