🍨🏄 Checkpoint ./script.js:18092373/16333 ./defaults.js:18092373/7460 ./index.html:18092373/126

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <!-- import the webpage's javascript files -->
     <script src="/script.js" defer></script>
     <script src="/interface.js" defer></script>
+    <script src="/defaults.js" defer></script>
   </head>
   <body>
     <h1>
       softpaint
     </h1>
     <p>
-      paint from any photograph, art at your fingertips ♡ <br/>
-      maintenance in progress, squashing bugs!
+      paint from any photograph:<br/>art at your fingertips ♡
     </p>
     <div id="error-display"></div>
     <div class="container">
