--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <title>softpaint</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
     <!-- import the webpage's javascript files -->
-    <script src="/script.js" defer></script>
-    <script src="/interface.js" defer></script>
-    <script src="/defaults.js" defer></script>
+    <script src="script.js" defer></script>
+    <script src="interface.js" defer></script>
+    <script src="defaults.js" defer></script>
   </head>
   <body>
     <h1>
       softpaint
     </h1>
     <p>
-      paint from any photograph:<br/>art at your fingertips ♡
+      paint from any photograph: art at your fingertips ♡
     </p>
     <div id="error-display"></div>
     <div class="container">
