Fix relative file paths

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <title>softpaint</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.js"></script>
     <!-- import the webpage's javascript files -->
-    <script src="script.js" defer></script>
-    <script src="interface.js" defer></script>
-    <script src="defaults.js" defer></script>
+    <script src="./script.js" defer></script>
+    <script src="./interface.js" defer></script>
+    <script src="./defaults.js" defer></script>
   </head>
   <body>
     <h1>
