--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       softpaint
     </h1>
     <p>
-      paint from any photograph: art at your fingertips ♡
+      art from any image ♡ <br/> paint slowly or use a smaller brush for detail
     </p>
     <div id="error-display"></div>
     <div class="container">
@@ -56,7 +56,7 @@
       <input
         id="slider"
         type="range"
-        min="1"
+        min="0"
         max="100"
         step="1"
         value="10"
