Initiate modal content

--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     <h1>
       softpaint
     </h1>
+    
     <p>
       art from any image ♡ <br/> paint slowly or use a smaller brush for detail
     </p>
+
     <div id="error-display"></div>
     <div class="container">
       <label for="user-upload" id="user-uploader" class="button">
@@ -67,6 +69,35 @@
         scroll to change || brush size: 40 || <br />
       </p>
         <a href="url" target="blank" id="source-link"> </a></div>
+    </div>
+
+
+    <div id="modal-open" class="button" onclick="openModal()">?</div>
+    <div id="info-modal" class="modal">
+      <div class="modal-content">
+      <span class="close">&times;</span>
+      <h3>how to softpaint</h3>
+      <ul>
+        <li>use the scroll wheel or slider to change your brush size
+        </li>
+        <li>
+          paint faster to create longer and thinner strokes
+        </li>
+        <li>
+          slower strokes and smaller brushes create more detail in your painting!
+        </li>
+        <li>
+          <b>upload: </b>paint an image from your own device 
+        </li>
+        <li>
+          <b>random: </b>paint a random image from softpaint's curated Unsplash collection  
+        </li>
+        <li>
+          <b>save: </b>download a copy of your beautiful softpainting for safekeeping ♡
+        </li>
+      </ul>
+      <p>made with love by <a href="https://github.com/midnightingale/">sophie liu</a></p>
+      </div>
     </div>
   </body>
 </html>
