--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </h1>
     
     <p>
-      art from any image ♡ <br/> paint slowly or use a smaller brush for detail
+      soothing art at your fingertips ♡
     </p>
 
     <div id="error-display"></div>
@@ -75,7 +75,7 @@
     <div id="modal-open" class="button" onclick="openModal()">?</div>
     <div id="info-modal" class="modal">
       <div class="modal-content">
-      <span class="close">&times;</span>
+      <div class="close" onclick="closeModal()">&nbsp;&times;&nbsp;</div>
       <h3>how to softpaint</h3>
       <ul>
         <li>use the scroll wheel or slider to change your brush size
@@ -86,17 +86,9 @@
         <li>
           slower strokes and smaller brushes create more detail in your painting!
         </li>
-        <li>
-          <b>upload: </b>paint an image from your own device 
-        </li>
-        <li>
-          <b>random: </b>paint a random image from softpaint's curated Unsplash collection  
-        </li>
-        <li>
-          <b>save: </b>download a copy of your beautiful softpainting for safekeeping ♡
-        </li>
-      </ul>
-      <p>made with love by <a href="https://github.com/midnightingale/">sophie liu</a></p>
+        </ul>
+        <hr>
+      <p id="modal-footer">made with love by <a href="https://github.com/midnightingale/">sophie liu</a></p>
       </div>
     </div>
   </body>
