Edit min random image height

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </li>
         </ul>
         <hr>
-      <p id="modal-footer">made with love by <a href="https://github.com/midnightingale/">sophie liu</a></p>
+      <p id="modal-footer">made with love by <a href="https://github.com/midnightingale/" target="blank">sophie liu</a></p>
       </div>
     </div>
   </body>
