--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           paint faster to create longer and thinner strokes
         </li>
         <li>
-          slower strokes and smaller brushes create more detail and discover hidden colours!
+          slower strokes and smaller brushes create more detail and reveal hidden colours!
         </li>
         </ul>
         <hr>
